Add Auth interceptor to API
- Performs authentication and authorization via web token.
- Move `pkg/crypto/pwt*` to `internal/api/session`.
- Sync `vendor/` for updated dependencies.
- All test variations pass.
